--- a/index.html
+++ b/index.html
@@ -12,16 +12,141 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
-  <body>
-    <div class="container">
-      <h1>Hello, world!</h1>
+  <body
+    cz-shortcut-listen="true"
+    data-new-gr-c-s-check-loaded="14.1086.0"
+    data-gr-ext-installed=""
+  >
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root">
+      <div class="App">
+        <div class="container">
+          <div class="Weather">
+            <a
+              href="https://www.shecodes.io/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img src="/images/logo.png" class="logo" alt="SheCodes Logo"
+            /></a>
+            <form>
+              <div class="row">
+                <div class="col-9">
+                  <input
+                    type="search"
+                    placeholder="Enter a city.."
+                    class="form-control search-input"
+                  />
+                </div>
+                <div class="col-3 p-0">
+                  <input
+                    type="submit"
+                    class="btn btn-primary w-100"
+                    value="Search"
+                  />
+                </div>
+              </div>
+            </form>
+            <div class="WeatherInfo">
+              <div class="row">
+                <div class="col-6">
+                  <h1>San Francisco</h1>
+                  <ul>
+                    <li><span>Thursday 14:28</span>, few clouds</li>
+                    <li>
+                      Humidity: <strong>84%</strong>, Wind:
+                      <strong>2.06km/h</strong>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-8">
+                  <div class="temperature-container d-flex justify-content-end">
+                    <canvas width="52" height="52"></canvas>
+                    <div>
+                      <span class="temperature">8</span
+                      ><span class="unit">°C</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="WeatherForecast row">
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Thu</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">13°</span
+                    ><span class="forecast-temperature-min">8°</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Fri</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">13°</span
+                    ><span class="forecast-temperature-min">10°</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Sat</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">13°</span
+                    ><span class="forecast-temperature-min">11°</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Sun</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">13°</span
+                    ><span class="forecast-temperature-min">9°</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Mon</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">13°</span
+                    ><span class="forecast-temperature-min">10°</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <footer>
+              This project was coded by
+              <a
+                href="https://www.shecodes.io/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >SheCodes</a
+              >
+              and is
+              <a
+                href="https://github.com/shecodesio/weather"
+                target="_blank"
+                rel="noopener noreferrer"
+                >open-sourced on GitHub</a
+              >
+              and
+              <a
+                href="https://shecodes-weather.netlify.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >hosted on Netlify</a
+              >
+            </footer>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <script src="src/app.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
