--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Weather App</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,142 +11,40 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/styles.css" />
+    <title>SheCodes</title>
   </head>
-  <body
-    cz-shortcut-listen="true"
-    data-new-gr-c-s-check-loaded="14.1086.0"
-    data-gr-ext-installed=""
-  >
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <div class="App">
-        <div class="container">
-          <div class="Weather">
-            <a
-              href="https://www.shecodes.io/"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><img src="/images/logo.png" class="logo" alt="SheCodes Logo"
-            /></a>
-            <form>
-              <div class="row">
-                <div class="col-9">
-                  <input
-                    type="search"
-                    placeholder="Enter a city.."
-                    class="form-control search-input"
-                  />
-                </div>
-                <div class="col-3 p-0">
-                  <input
-                    type="submit"
-                    class="btn btn-primary w-100"
-                    value="Search"
-                  />
-                </div>
-              </div>
-            </form>
-            <div class="WeatherInfo">
-              <div class="row">
-                <div class="col-6">
-                  <h1>San Francisco</h1>
-                  <ul>
-                    <li><span>Thursday 14:28</span>, few clouds</li>
-                    <li>
-                      Humidity: <strong>84%</strong>, Wind:
-                      <strong>2.06km/h</strong>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-8">
-                  <div class="temperature-container d-flex justify-content-end">
-                    <canvas width="52" height="52"></canvas>
-                    <div>
-                      <span class="temperature">8</span
-                      ><span class="unit">°C</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="WeatherForecast row">
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Thu</div>
-                  <canvas width="38" height="38"></canvas>
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">13°</span
-                    ><span class="forecast-temperature-min">8°</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Fri</div>
-                  <canvas width="38" height="38"></canvas>
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">13°</span
-                    ><span class="forecast-temperature-min">10°</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Sat</div>
-                  <canvas width="38" height="38"></canvas>
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">13°</span
-                    ><span class="forecast-temperature-min">11°</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Sun</div>
-                  <canvas width="38" height="38"></canvas>
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">13°</span
-                    ><span class="forecast-temperature-min">9°</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="WeatherForecastPreview">
-                  <div class="forecast-time">Mon</div>
-                  <canvas width="38" height="38"></canvas>
-                  <div class="forecast-temperature">
-                    <span class="forecast-temperature-max">13°</span
-                    ><span class="forecast-temperature-min">10°</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <footer>
-              This project was coded by
-              <a
-                href="https://www.shecodes.io/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >SheCodes</a
-              >
-              and is
-              <a
-                href="https://github.com/shecodesio/weather"
-                target="_blank"
-                rel="noopener noreferrer"
-                >open-sourced on GitHub</a
-              >
-              and
-              <a
-                href="https://shecodes-weather.netlify.app/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >hosted on Netlify</a
-              >
-            </footer>
-          </div>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+            alt="sunny"
+          />
+          12°C | °F
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li>Precipitation: 2%</li>
+            <li>Humidity: 78%</li>
+            <li>Wind: 15 mph</li>
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <ul>
+            <li>Princes Risborough, UK</li>
+            <li>Thursday 14:00</li>
+            <li>Cloudy</li>
+          </ul>
         </div>
       </div>
+      <small>
+        <a href="https://github.com/suzStar/vanillaWeatherApp" target="_blank"
+          >Open-source code</a
+        >
+        by Suzanne Sharman
+      </small>
     </div>
+    <script src="src/app.js"></script>
   </body>
 </html>
