Location, Day&Time and Condition CSS Added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>SheCodes</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container weather-app">
       <div class="row">
         <div class="col-md-2">
           <img
@@ -31,10 +31,10 @@
           </ul>
         </div>
         <div class="col-md-6">
-          <ul>
-            <li>Princes Risborough, UK</li>
-            <li>Thursday 14:00</li>
-            <li>Cloudy</li>
+          <ul class="local-details">
+            <li class="location">Princes Risborough, UK</li>
+            <li class="dayTime">Thursday 14:00</li>
+            <li class="local-condition">Cloudy</li>
           </ul>
         </div>
       </div>
