Weekly Forecast Added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,91 @@
         </div>
       </div>
 
-      
+      <hr />
+      <div class="container forecast">
+        <div class="row weekDays">
+          <div class="col">Tue</div>
+          <div class="col">Wed</div>
+          <div class="col">Thurs</div>
+          <div class="col">Fri</div>
+          <div class="col">Sat</div>
+          <div class="col">Fri</div>
+          <div class="col">Sat</div>
+        </div>
+        <div class="row forecastImage">
+          <div class="col">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+              alt="Current Weather"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+              alt="Current Weather"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+              alt="Current Weather"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+              alt="Current Weather"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+              alt="Current Weather"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+              alt="Current Weather"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+              alt="Current Weather"
+            />
+          </div>
+        </div>
+        <div class="row forecastTemp">
+          <div class="col">
+            <span class="high">26°</span>
+            <span class="low">26°</span>
+          </div>
+          <div class="col">
+            <span class="high">26°</span>
+            <span class="low">26°</span>
+          </div>
+          <div class="col">
+            <span class="high">26°</span>
+            <span class="low">26°</span>
+          </div>
+          <div class="col">
+            <span class="high">26°</span>
+            <span class="low">26°</span>
+          </div>
+          <div class="col">
+            <span class="high">26°</span>
+            <span class="low">26°</span>
+          </div>
+          <div class="col">
+            <span class="high">26°</span>
+            <span class="low">26°</span>
+          </div>
+          <div class="col">
+            <span class="high">26°</span>
+            <span class="low">26°</span>
+          </div>
+        </div>
       <br />
       <footer>
         <a href="https://github.com/suzStar/vanillaWeatherApp" target="_blank"
