--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
             <div class="col-md-7">
               <img
                 class="current-weather-icon"
-                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                alt="sunny"
+                id="current-weather-icon"
+                src=""
+                alt=""
               />
               <div class="temp-unit">
                 <span class="temp" id="current-temp">12</span
