Add in Search Functionality

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <form class="citySearch">
+          <form class="citySearch" id="city-search-form">
             <div class="input-group rounded">
               <input
+                id="city-input"
                 type="search"
                 class="form-control"
                 placeholder="Search here"
