--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
               <div class="temp-unit">
                 <span class="temp" id="current-temp">12</span
                 ><span class="unit"
-                  ><a href="#">°C</a> | <a href="#">°F</a></span
+                  ><a href="#" id="celsius-link" class="active">°C</a> |
+                  <a href="#" id="fahrenheit-link">°F</a></span
                 >
               </div>
 
