--- a/index.html
+++ b/index.html
@@ -1,145 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="src/styles.css" />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>WeatherApp</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="weather-app-wrapper">
-        <div class="weather-app">
-          <form class="citySearch" id="city-search-form">
-            <div class="input-group rounded">
-              <input
-                id="city-input"
-                type="search"
-                class="form-control"
-                placeholder="Search here"
-                aria-label="Search"
-                aria-describedby="search-addon"
-              />
-              <span class="btn btn-primary border-2" id="search-addon">
-                SEARCH
-              </span>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <link rel="stylesheet" href="src/styles.css" />
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <title>WeatherApp</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="weather-app-wrapper">
+      <div class="weather-app">
+        <form class="citySearch" id="city-search-form">
+          <div class="input-group rounded">
+            <input id="city-input" type="search" class="form-control" placeholder="Search here" aria-label="Search"
+              aria-describedby="search-addon" />
+            <span class="btn btn-primary border-2" id="search-addon">
+              SEARCH
+            </span>
+          </div>
+        </form>
+
+        <br />
+
+        <div class="row">
+          <div class="col-md-7">
+            <img class="current-weather-icon" id="current-weather-icon" src="" alt="" />
+            <div class="temp-unit">
+              <span class="temp" id="current-temp">12</span><span class="unit"><a href="#" id="celsius-link"
+                  class="active">°C</a> |
+                <a href="#" id="fahrenheit-link">°F</a></span>
             </div>
-          </form>
 
-          <br />
+            <ul class="weather-details">
+              <!-- <li id="precipitation">Precipitation: 2%</li> -->
+              <li id="humidity">Humidity: 78%</li>
+              <li id="wind">Wind: 15 mph</li>
+            </ul>
+          </div>
+          <div class="col-md-5">
+            <ul class="local-details">
+              <li class="location" id="city">Princes Risborough, UK</li>
+              <li class="dayTime" id="day-time">Thursday 14:00</li>
+              <li class="local-condition" id="description">Cloudy</li>
+            </ul>
+          </div>
+        </div>
 
-          <div class="row">
-            <div class="col-md-7">
-              <img
-                class="current-weather-icon"
-                id="current-weather-icon"
-                src=""
-                alt=""
-              />
-              <div class="temp-unit">
-                <span class="temp" id="current-temp">12</span
-                ><span class="unit"
-                  ><a href="#" id="celsius-link" class="active">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a></span
-                >
-              </div>
-
-              <ul class="weather-details">
-                <li id="precipitation">Precipitation: 2%</li>
-                <li id="humidity">Humidity: 78%</li>
-                <li id="wind">Wind: 15 mph</li>
-              </ul>
+        <hr />
+        <div class="container forecast">
+          <div class="row weekDays">
+            <div class="col">Tue</div>
+            <div class="col">Wed</div>
+            <div class="col">Thurs</div>
+            <div class="col">Fri</div>
+            <div class="col">Sat</div>
+          </div>
+          <div class="row forecastImage">
+            <div class="col">
+              <img src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png" alt="Current Weather" />
             </div>
-            <div class="col-md-5">
-              <ul class="local-details">
-                <li class="location" id="city">Princes Risborough, UK</li>
-                <li class="dayTime" id="day-time">Thursday 14:00</li>
-                <li class="local-condition" id="description">Cloudy</li>
-              </ul>
+            <div class="col">
+              <img src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png" alt="Current Weather" />
+            </div>
+            <div class="col">
+              <img src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png" alt="Current Weather" />
+            </div>
+            <div class="col">
+              <img src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png" alt="Current Weather" />
+            </div>
+            <div class="col">
+              <img src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png" alt="Current Weather" />
             </div>
           </div>
-
-          <hr />
-          <div class="container forecast">
-            <div class="row weekDays">
-              <div class="col">Tue</div>
-              <div class="col">Wed</div>
-              <div class="col">Thurs</div>
-              <div class="col">Fri</div>
-              <div class="col">Sat</div>
+          <div class="row forecastTemp">
+            <div class="col">
+              <span class="high">26°</span>
+              <span class="low">26°</span>
             </div>
-            <div class="row forecastImage">
-              <div class="col">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                  alt="Current Weather"
-                />
-              </div>
-              <div class="col">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                  alt="Current Weather"
-                />
-              </div>
-              <div class="col">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                  alt="Current Weather"
-                />
-              </div>
-              <div class="col">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                  alt="Current Weather"
-                />
-              </div>
-              <div class="col">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                  alt="Current Weather"
-                />
-              </div>
+            <div class="col">
+              <span class="high">26°</span>
+              <span class="low">26°</span>
             </div>
-            <div class="row forecastTemp">
-              <div class="col">
-                <span class="high">26°</span>
-                <span class="low">26°</span>
-              </div>
-              <div class="col">
-                <span class="high">26°</span>
-                <span class="low">26°</span>
-              </div>
-              <div class="col">
-                <span class="high">26°</span>
-                <span class="low">26°</span>
-              </div>
-              <div class="col">
-                <span class="high">26°</span>
-                <span class="low">26°</span>
-              </div>
-              <div class="col">
-                <span class="high">26°</span>
-                <span class="low">26°</span>
-              </div>
+            <div class="col">
+              <span class="high">26°</span>
+              <span class="low">26°</span>
+            </div>
+            <div class="col">
+              <span class="high">26°</span>
+              <span class="low">26°</span>
+            </div>
+            <div class="col">
+              <span class="high">26°</span>
+              <span class="low">26°</span>
             </div>
           </div>
         </div>
-        <small>
-          <a href="https://github.com/suzStar/vanillaWeatherApp" target="_blank"
-            >Open-source code</a
-          >
-          by Suzanne Sharman
-        </small>
       </div>
+      <small>
+        <a href="https://github.com/suzStar/vanillaWeatherApp" target="_blank">Open-source code</a>
+        by Suzanne Sharman
+      </small>
     </div>
-    <script src="src/app.js"></script>
-  </body>
+  </div>
+  <script src="src/app.js"></script>
+</body>
+
 </html>
