--- a/index.html
+++ b/index.html
@@ -37,15 +37,13 @@
                   <span class="description" id="description">Cloudy</span>
                 </div>
                 <div class="col">
-                  <img src="images/humidity.png" alt="Humidity Icon" width="7.5" id="humidityIcon" /> <span
-                    id="humidity">78%</span>
-                  <img src="images/wind.png" alt="Wind Icon" width="10" id="windIcon" />
+                  <img src="" alt="Humidity Icon" width="7.5" id="humidityIcon" /> <span id="humidity">78%</span>
+                  <img src="" alt="Wind Icon" width="10" id="windIcon" />
                   <span id="wind">15 mph</span>
                 </div>
               </div>
               <div class="col" style="height: 75px;">
-                <img class="current-weather-icon" id="current-weather-icon"
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png" alt="" width="90" />
+                <img class="current-weather-icon" id="current-weather-icon" src="" alt="" width="90" />
               </div>
             </div>
           </div>
